--- a/src/app/components/customer/sidebar/sidebar.component.html
+++ b/src/app/components/customer/sidebar/sidebar.component.html
@@ -29,13 +29,18 @@
         </a>
       </li>
       <li>
+        <a href="#" class="nav-link text-white" [routerLink]="['/customer-dashboard/view-inspection-history']">
+          View Inspection History
+        </a>
+      </li>
+      <li>
         <a href="#" class="nav-link text-white"  [routerLink]="['/customer-dashboard/view-proposed-policies']">
           View Proposed Policies
         </a>
       </li>
       <li>
         <a href="#" class="nav-link text-white" [routerLink]="['/customer-dashboard/view-active-policies']">
-         Active Policies
+         View All Policies
         </a>
       </li>
     </ul>
