--- a/src/app/pages/login-page/login-page.component.html
+++ b/src/app/pages/login-page/login-page.component.html
@@ -1,9 +1,10 @@
 <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
+<app-header></app-header>
 <!doctype html>
 <html lang="en" data-bs-theme="auto">
     <body>
-<main class="form-signin w-100 m-auto">
-    <form>
+<main class="form-signin w-100 m-auto" >
+    <form style="margin-top: 50px;">
      
       <h1 class="h3 mb-3 fw-normal">Please sign in</h1>
 
@@ -38,6 +39,6 @@
       <p class="mt-5 mb-3 text-body-secondary">&copy; 2017–2024</p>
     </form>
   </main>
-  <div style="height: 200px;"></div>
+  <div style="height: 350px;"></div>
 </body>
 </html>
