--- a/src/app/pages/signup-page/signup-page.component.html
+++ b/src/app/pages/signup-page/signup-page.component.html
@@ -1,4 +1,5 @@
 <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
+<app-header></app-header>
 <!doctype html>
 <html lang="en" data-bs-theme="auto">
     <body>
