final frontend changes

--- a/src/app/components/customer/view-inspections-history/view-inspections-history.component.html
+++ b/src/app/components/customer/view-inspections-history/view-inspections-history.component.html
@@ -10,7 +10,7 @@
         <p><strong>Inspection Date:</strong> {{ i.inspectionDate}}</p>
       </div>
     </div>
-    <!-- <div class="card-hover">
+    <div class="card-hover">
       <h4>Vehicle Details:</h4>
       <p><strong>Manufacturer:</strong> {{ i.vehicle.manufacturer }}</p>
       <p><strong>Model:</strong> {{ i.vehicle.model }}</p>
@@ -19,10 +19,6 @@
       <p><strong>Vehicle Condition:</strong> {{ i.vehicle_condition }}</p>
       <p><strong>Driver Profile:</strong> {{ i.driver_profile}}</p>
       <p><strong>Want Coverage:</strong> {{ i.want_coverage}}</p>
-      <p><strong>Type:</strong> {{ p.policy.type }}</p>
-      <h4>Validity:</h4>
-      <p><strong>Date of Purchase:</strong> {{ p.date_of_purchase }}</p>
-      <p><strong>Date of Expiry:</strong> {{ p.date_of_expiry }}</p>
-    </div> -->
+    </div>
   </div>
 </div>
